--- a/respuestas.tex
+++ b/respuestas.tex
@@ -1,1 +1,11 @@
-
+\documentclass{udparticle}
+\setlogo{EIT}
+\headertext{Respuestas tarea de preparación para la Solemne}
+\title{Tarea de preparación para la Solemne}
+\author{Ignacio Yanjari, Dagoberto Navarrete, Ignacio López, Thomas Muñoz.}
+\begin{document}
+\maketitle
+\begin{enumerate}
+%aca se iran poniendo las respuestas, para esto escribir \item y su respuesta, eso si estarán en orden.
+\end{enumerate}
+\end{document}
