--- a/respuestas.tex
+++ b/respuestas.tex
@@ -7,5 +7,42 @@
 \maketitle
 \begin{enumerate}
 %aca se iran poniendo las respuestas, para esto escribir \item y su respuesta, eso si estarán en orden.
+1.-Fuente:Emite el mensaje
+Transductor de entrada: Convierte el mensaje en señales eléctricas
+Transmisor: Pasa la señal al canal, mediante el proceso de modulación
+Canal de Transmisión: Nexo eléctrico entre el emisor y receptor
+Receptor: Realiza el proceso de demodulación 
+Transductor de salida: transforma las señales para que puedan llegar a destino
+2.-estructura en capas de hardware y software que facilita el intercambio de información entre sistemas
+7.- el estándar de jure es aprobado por una organización, mientras que el de facto es un estándar aceptado pero no legitimado por una organización
+8.-Interfaz: es una conexión entre dos sistemas dando una comunicación en distintos niveles
+Protocolo: Conjunto de reglas y estándares que controlan la comunicación entre sistemas
+11.-ANSI: Instituto nacional estadounidense de estándares
+TIA: Asociación de la industria de telecomunicaciones
+EIA: Alianza de industrias electrónicas
+ITU-T: Sector de normalización de las comunicaciones de la UIT
+CCITT: Comité Consultivo Internacional Telegráfico y Telefónico
+ISO: Organización Internacional de Normalización
+IEEE: Instituto de Ingeniería Eléctrica y Electrónica
+21.-BAN: Body Area Network
+WBAN: Wireless Body Area Network
+PAN: Personal Area Network
+LAN: Local Area Network
+WLAN: Wireless Local Area Network
+MAN: Metropolitan Area Network
+WAN: Wide Area Network
+GAN: Global Area Network
+23.- IEEE 802.3: MAN
+IEEE 802.5: LAN
+IEEE 802.11: WLAN
+IEEE 802.15: WPAN
+IEEE 802.16: WMAN
+24.- IEEE 802.3: Ethernet
+IEEE   802.3u: Fast Ethernet
+IEEE  802.3ab: Gigabit Ethernet
+IEEE 802.3ae: 10 Gigabit Ethernet
+IEEE 802.3ba: 100 Gigabit Ethernet
+28.- El mínimo son 84 bytes y el máximo 1542 bytes
+
 \end{enumerate}
 \end{document}
