--- a/respuestas.tex
+++ b/respuestas.tex
@@ -11,9 +11,11 @@
 Transductor de entrada: Convierte el mensaje en señales eléctricas
 Transmisor: Pasa la señal al canal, mediante el proceso de modulación
 Canal de Transmisión: Nexo eléctrico entre el emisor y receptor
-Receptor: Realiza el proceso de demodulación 
 Transductor de salida: transforma las señales para que puedan llegar a destino
+Receptor: Realiza el proceso de demodulación 
 2.-estructura en capas de hardware y software que facilita el intercambio de información entre sistemas
+yo digo que en la 2 va esto : los protocolos describen los requerimientos e iteracciones precisas para que los
+dispositivos se puedan comunicar en forma exitosa
 7.- el estándar de jure es aprobado por una organización, mientras que el de facto es un estándar aceptado pero no legitimado por una organización
 8.-Interfaz: es una conexión entre dos sistemas dando una comunicación en distintos niveles
 Protocolo: Conjunto de reglas y estándares que controlan la comunicación entre sistemas
