--- a/respuestas.tex
+++ b/respuestas.tex
@@ -16,6 +16,13 @@ Receptor: Realiza el proceso de demodulación
 2.-estructura en capas de hardware y software que facilita el intercambio de información entre sistemas
 yo digo que en la 2 va esto : los protocolos describen los requerimientos e iteracciones precisas para que los
 dispositivos se puedan comunicar en forma exitosa
+3.- -Aplicación:Conectividad entre red y humano
+    -Presentación: Representacion común entre los datos transferidos y la capa de aplicacion
+    -Sesión: Organiza el dialogo y administra el intercambio de datos con la capa de presentación
+    -Transporte: Transfiere,segmenta y reemsambla los datos para lo comunicacion entre los dispositivos finales
+    -Red:Intercambia los datos individuales en la red de cada dispositivo final
+    -Enlace de red: Describe los metodos para intercambiar datos
+    -Física: Medios mecánico para la transmision y recepción
 7.- el estándar de jure es aprobado por una organización, mientras que el de facto es un estándar aceptado pero no legitimado por una organización
 8.-Interfaz: es una conexión entre dos sistemas dando una comunicación en distintos niveles
 Protocolo: Conjunto de reglas y estándares que controlan la comunicación entre sistemas
