--- a/respuestas.tex
+++ b/respuestas.tex
@@ -7,16 +7,16 @@
 \maketitle
 \begin{enumerate}
 %aca se iran poniendo las respuestas, para esto escribir \item y su respuesta, eso si estarán en orden.
-1.-Fuente:Emite el mensaje
+\item Fuente:Emite el mensaje
 Transductor de entrada: Convierte el mensaje en señales eléctricas
 Transmisor: Pasa la señal al canal, mediante el proceso de modulación
 Canal de Transmisión: Nexo eléctrico entre el emisor y receptor
 Transductor de salida: transforma las señales para que puedan llegar a destino
 Receptor: Realiza el proceso de demodulación 
-2.-estructura en capas de hardware y software que facilita el intercambio de información entre sistemas
+\item estructura en capas de hardware y software que facilita el intercambio de información entre sistemas
 yo digo que en la 2 va esto : los protocolos describen los requerimientos e iteracciones precisas para que los
 dispositivos se puedan comunicar en forma exitosa
-3.- -Aplicación:Conectividad entre red y humano
+\item -Aplicación:Conectividad entre red y humano
     -Presentación: Representacion común entre los datos transferidos y la capa de aplicacion
     -Sesión: Organiza el dialogo y administra el intercambio de datos con la capa de presentación
     -Transporte: Transfiere,segmenta y reemsambla los datos para lo comunicacion entre los dispositivos finales
