--- a/respuestas.tex
+++ b/respuestas.tex
@@ -7,25 +7,61 @@
 \maketitle
 \begin{enumerate}
 %aca se iran poniendo las respuestas, para esto escribir \item y su respuesta, eso si estarán en orden.
-\item Fuente:Emite el mensaje
-Transductor de entrada: Convierte el mensaje en señales eléctricas
-Transmisor: Pasa la señal al canal, mediante el proceso de modulación
-Canal de Transmisión: Nexo eléctrico entre el emisor y receptor
-Transductor de salida: transforma las señales para que puedan llegar a destino
-Receptor: Realiza el proceso de demodulación 
-\item estructura en capas de hardware y software que facilita el intercambio de información entre sistemas
-yo digo que en la 2 va esto : los protocolos describen los requerimientos e iteracciones precisas para que los
-dispositivos se puedan comunicar en forma exitosa
-\item -Aplicación:Conectividad entre red y humano
+
+\item Describa cada uno de los componentes basicos de un sistema de comunicaciones \\
+    Fuente:Emite el mensaje
+    Transductor de entrada: Convierte el mensaje en señales eléctricas
+    Transmisor: Pasa la señal al canal, mediante el proceso de modulación
+    Canal de Transmisión: Nexo eléctrico entre el emisor y receptor
+    Transductor de salida: transforma las señales para que puedan llegar a destino
+    Receptor: Realiza el proceso de demodulación 
+
+\item ¿Que es una arquitectura de protocolos? \\
+    estructura en capas de hardware y software que facilita el intercambio de información para que los
+    dispositivos se puedan comunicar en forma exitosa
+
+\item Resuma las funciones de las siete capas del modelo OSI de OSI.\\
+    -Aplicación:Conectividad entre red y humano
     -Presentación: Representacion común entre los datos transferidos y la capa de aplicacion
     -Sesión: Organiza el dialogo y administra el intercambio de datos con la capa de presentación
     -Transporte: Transfiere,segmenta y reemsambla los datos para lo comunicacion entre los dispositivos finales
     -Red:Intercambia los datos individuales en la red de cada dispositivo final
     -Enlace de red: Describe los metodos para intercambiar datos
     -Física: Medios mecánico para la transmision y recepción
-7.- el estándar de jure es aprobado por una organización, mientras que el de facto es un estándar aceptado pero no legitimado por una organización
-8.-Interfaz: es una conexión entre dos sistemas dando una comunicación en distintos niveles
-Protocolo: Conjunto de reglas y estándares que controlan la comunicación entre sistemas
+\item Resuma las funciones del modelo TCP/IP híbrido, incluyendo las 2 sub-capas de enlace de datos
+(LLC y MAC).\\
+
+\item Mencione algunas ventajas y desventajas del modelo OSI de ISO\\
+    
+\item Mencione algunas ventajas y desventajas del modelo de referencia TCP/IP híbrido.\\
+
+\item Indique la diferencia entre un estándar de  facto y un estándar de  jure\\
+    el estándar de jure es aprobado por una organización, mientras que el de facto es un estándar aceptado pero 
+    no legitimado por una organización
+\item Defina o explique los conceptos de: interfaz y protocolo\\
+    Interfaz: es una conexión entre dos sistemas dando una comunicación en distintos niveles
+    Protocolo: Conjunto de reglas y estándares que controlan la comunicación entre sistemas
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+\item
+
 11.-ANSI: Instituto nacional estadounidense de estándares
 TIA: Asociación de la industria de telecomunicaciones
 EIA: Alianza de industrias electrónicas
