--- a/respuestas.tex
+++ b/respuestas.tex
@@ -9,25 +9,25 @@
 %aca se iran poniendo las respuestas, para esto escribir \item y su respuesta, eso si estarán en orden.
 
 \item Describa cada uno de los componentes basicos de un sistema de comunicaciones \\
-    Fuente:Emite el mensaje
-    Transductor de entrada: Convierte el mensaje en señales eléctricas
-    Transmisor: Pasa la señal al canal, mediante el proceso de modulación
-    Canal de Transmisión: Nexo eléctrico entre el emisor y receptor
-    Transductor de salida: transforma las señales para que puedan llegar a destino
-    Receptor: Realiza el proceso de demodulación 
+    Fuente:Emite el mensaje\\
+    Transductor de entrada: Convierte el mensaje en señales eléctricas\\
+    Transmisor: Pasa la señal al canal, mediante el proceso de modulación\\
+    Canal de Transmisión: Nexo eléctrico entre el emisor y receptor\\
+    Transductor de salida: transforma las señales para que puedan llegar a destino\\
+    Receptor: Realiza el proceso de demodulación \\
 
 \item ¿Que es una arquitectura de protocolos? \\
-    estructura en capas de hardware y software que facilita el intercambio de información para que los
-    dispositivos se puedan comunicar en forma exitosa
+    Estructura en capas de hardware y software que facilita el intercambio de información para que los
+    dispositivos se puedan comunicar en forma exitosa\\
 
 \item Resuma las funciones de las siete capas del modelo OSI de OSI.\\
-    -Aplicación:Conectividad entre red y humano
-    -Presentación: Representacion común entre los datos transferidos y la capa de aplicacion
-    -Sesión: Organiza el dialogo y administra el intercambio de datos con la capa de presentación
-    -Transporte: Transfiere,segmenta y reemsambla los datos para lo comunicacion entre los dispositivos finales
-    -Red:Intercambia los datos individuales en la red de cada dispositivo final
-    -Enlace de red: Describe los metodos para intercambiar datos
-    -Física: Medios mecánico para la transmision y recepción
+    -Aplicación:Conectividad entre red y humano\\
+    -Presentación: Representacion común entre los datos transferidos y la capa de aplicacion\\
+    -Sesión: Organiza el dialogo y administra el intercambio de datos con la capa de presentación\\
+    -Transporte: Transfiere,segmenta y reemsambla los datos para lo comunicacion entre los dispositivos finales\\
+    -Red:Intercambia los datos individuales en la red de cada dispositivo final\\
+    -Enlace de red: Describe los metodos para intercambiar datos\\
+    -Física: Medios mecánico para la transmision y recepción\\
 \item Resuma las funciones del modelo TCP/IP híbrido, incluyendo las 2 sub-capas de enlace de datos
 (LLC y MAC).\\
 
@@ -36,31 +36,111 @@
 \item Mencione algunas ventajas y desventajas del modelo de referencia TCP/IP híbrido.\\
 
 \item Indique la diferencia entre un estándar de  facto y un estándar de  jure\\
-    el estándar de jure es aprobado por una organización, mientras que el de facto es un estándar aceptado pero 
-    no legitimado por una organización
+    El estándar de jure es aprobado por una organización, mientras que el de facto es un estándar aceptado pero 
+    no legitimado por una organización\\
 \item Defina o explique los conceptos de: interfaz y protocolo\\
-    Interfaz: es una conexión entre dos sistemas dando una comunicación en distintos niveles
-    Protocolo: Conjunto de reglas y estándares que controlan la comunicación entre sistemas
-\item
-\item
-\item
-\item
-\item
-\item
-\item
-\item
-\item
-\item
-\item
-\item
-\item
-\item
-\item
-\item
-\item
-\item
-\item
-\item
+    Interfaz: es una conexión entre dos sistemas dando una comunicación en distintos niveles\\
+    Protocolo: Conjunto de reglas y estándares que controlan la comunicación entre sistemas\\
+\item Explique en que consiste el proceso de encapsulamiento del mensaje\\
+
+\itemIndique En que capas del modelo OSI las unidades de datos de los protocolos se llaman segmento,
+frame, paquete y bits.\\
+
+    REVISEN ESTO NO ESTOY MUY SEGURO D:
+  Física -> Bits\\
+  Enlace de red -> Paquete\\
+  Red -> Frame\\
+  Transporte -> Segmento\\
+
+\item Relacionado con organismos de estandarizacion en redes LAN, ¿qu ´ e significan las siglas ANSI, ´
+TIA, EIA, ITU-T, CCITT, FCC, ISO e IEEE?\\
+
+    ANSI: Instituto nacional estadounidense de estándares\\
+    TIA: Asociación de la industria de telecomunicaciones\\
+    EIA: Alianza de industrias electrónicas\\
+    ITU-T: Sector de normalización de las comunicaciones de la UIT\\
+    CCITT: Comité Consultivo Internacional Telegráfico y Telefónico\\
+    ISO: Organización Internacional de Normalización\\
+    IEEE: Instituto de Ingeniería Eléctrica y Electrónica\\
+
+\item Explique lo que entiende por: broadcast (difusión),multicast y unicast.\\
+
+\item Defina y compare los medios simplex, half-duplex y full-duplex. De ejemplos de sistemas para ´
+cada uno de estos casos.\\
+    simplex: transmite solo en una direccion de Tx a Rx\\
+        emjemplo: cuando se imprime a traves de un computador a una impresora\\
+    half-duplex : Transmite mediante canales de envio y recepción no simultaneos\\
+        ejemplo : wokitokis\\
+    full-duplex : Transmite mediante  canales de envío y recepción simultáneos\\
+        ejemplo : Llamada en telefono celular\\
+        
+\item Explique lo que entiende por: transmisiones en baseband y en broadband e indique 4 diferencias
+entre las dos tecnicas de transmisión\\
+
+\item Indique 2 ejemplos de redes que transmiten en baseband y 2 que transmiten en broadband\\
+
+\item Defina o explique: topología física y topología logica. \\
+
+\item De un ejemplo de red que corresponda a una topología física bus y que tenga una topología
+logica anillo.\\
+
+\item De un ejemplo de red que corresponda a una topolog ´ ´ıa f´ısica estrella y que tenga una topolog´ıa
+logica bus.
+
+\item Señale las ventajas y desventaja de los tipos de topolog ˜ ´ıas f´ısica de bus lineal, estrella, arbol, ´
+malla y anillo.
+
+\item De un ejemplo de una red que corresponda a una topolog ´ ´ıa f´ısica: bus, estrella, arbol, malla y ´
+anillo.\\
+
+\item Indique que significan las siglas BAN, WBAN, PAN, LAN, WLAN, MAN, WAN y GAN.\\
+    BAN: Body Area Network\\
+    WBAN: Wireless Body Area Network\\
+    PAN: Personal Area Network\\
+    LAN: Local Area Network\\
+    WLAN: Wireless Local Area Network\\
+    MAN: Metropolitan Area Network\\
+    WAN: Wide Area Network\\
+    GAN: Global Area Network\\
+
+
+\item ¿Cuales son las funciones de un DTE y las de un DCE. Dé 2 ejemplos de cada uno?.\\
+
+\item ¿A que tipos de redes (PAN, LAN, WLAN, etc.) se refieren los estándares IEEE 802.3, 802.5,
+802.11, 802.15, 802.16?\\
+    IEEE 802.3: MAN\\
+    IEEE 802.5: LAN\\
+    IEEE 802.11: WLAN\\
+    IEEE 802.15: WPAN\\
+    IEEE 802.16: WMAN\\
+
+\item Indique cual designación 'Ethernet' (Fast, Giga, etc.) corresponden las siguientes extensiones
+del estandar IEEE 802.3: 802.3u; 802.3ab; 802.3ae; 802.3ba.\\
+    IEEE 802.3: Ethernet\\
+    IEEE   802.3u: Fast Ethernet\\
+    IEEE  802.3ab: Gigabit Ethernet\\
+    IEEE 802.3ae: 10 Gigabit Ethernet\\
+    IEEE 802.3ba: 100 Gigabit Ethernet\\
+    
+\item Indique la velocidad, tipo de cable, topología y distancia maxima del segmento para las 
+siguientes especificaciones de capa física Ethernet: 10BASE2, 10BASE5, 100BASE-T, 100Base-TX,
+100BASE-FX, 1000Base-T, 1000BASE-CX, 1000Base-LX, 10GBASE-S y 10GBASE-L.\\
+
+\item ¿Por que la distancia máxima de segmento de red es mayor para 100BASE-FX que para 100BASE- ´
+TX?.\\
+
+\item Dibuje el formato del frame Ethernet indicando el tamano (en bytes) de cada uno de sus campos
+y las funciones que cumplen.\\
+
+\item ¿Cual es el mínimo y maximo tamaño de un frame Ethernet?.\\
+    El mínimo son 84 bytes y el máximo 1542 bytes
+\item ¿Por que es importante la etapa de preámbulo al comienzo de cada frame?.\\
+
+\item Explique las diferencias entre direcciones logicas y direcciones físicas.
+
+\item En relacion a una dirección MAC Ethernet, explique el propósito de los primeros 24 bits. ¿Qué
+es OUI en una direccion MAC?, ¿qué indica una dirección MAC de destino FF-FF-FF-FF-FF- ´
+FF?.\\
 
 11.-ANSI: Instituto nacional estadounidense de estándares
 TIA: Asociación de la industria de telecomunicaciones
@@ -69,25 +149,9 @@ ITU-T: Sector de normalización de las comunicaciones de la UIT
 CCITT: Comité Consultivo Internacional Telegráfico y Telefónico
 ISO: Organización Internacional de Normalización
 IEEE: Instituto de Ingeniería Eléctrica y Electrónica
-21.-BAN: Body Area Network
-WBAN: Wireless Body Area Network
-PAN: Personal Area Network
-LAN: Local Area Network
-WLAN: Wireless Local Area Network
-MAN: Metropolitan Area Network
-WAN: Wide Area Network
-GAN: Global Area Network
-23.- IEEE 802.3: MAN
-IEEE 802.5: LAN
-IEEE 802.11: WLAN
-IEEE 802.15: WPAN
-IEEE 802.16: WMAN
-24.- IEEE 802.3: Ethernet
-IEEE   802.3u: Fast Ethernet
-IEEE  802.3ab: Gigabit Ethernet
-IEEE 802.3ae: 10 Gigabit Ethernet
-IEEE 802.3ba: 100 Gigabit Ethernet
-28.- El mínimo son 84 bytes y el máximo 1542 bytes
+
+
+
 
 \end{enumerate}
 \end{document}
