--- a/respuestas.tex
+++ b/respuestas.tex
@@ -23,13 +23,14 @@
 \item Resuma las funciones de las siete capas del modelo OSI de OSI.\\
     -Aplicación:Conectividad entre red y humano\\
     -Presentación: Representacion común entre los datos transferidos y la capa de aplicacion\\
-    -Sesión: Organiza el dialogo y administra el intercambio de datos con la capa de presentación\\
-    -Transporte: Transfiere,segmenta y reemsambla los datos para lo comunicacion entre los dispositivos finales\\
-    -Red:Intercambia los datos individuales en la red de cada dispositivo final\\
-    -Enlace de red: Describe los metodos para intercambiar datos\\
+    -Sesión: Comunicacion entre dispositivos de la red\\
+    -Transporte: Conexión extremo-a-extremo y fiabilidad de los datos\\
+    -Red:Intercambia los datos individuales en la red de cada dispositivo final, determinacion de ruta e IP\\
+    -Enlace de red: Describe los metodos para intercambiar datos, direccionamiento físico MAC y LLC\\
     -Física: Medios mecánico para la transmision y recepción\\
 \item Resuma las funciones del modelo TCP/IP híbrido, incluyendo las 2 sub-capas de enlace de datos
 (LLC y MAC).\\
+
 
 \item Mencione algunas ventajas y desventajas del modelo OSI de ISO\\
     -Ventajas:\\
