--- a/respuestas.tex
+++ b/respuestas.tex
@@ -20,7 +20,7 @@
     Estructura en capas de hardware y software que facilita el intercambio de información para que los
     dispositivos se puedan comunicar en forma exitosa\\
 
-\item Resuma las funciones de las siete capas del modelo OSI de OSI.\\
+\item Resuma las funciones de las siete capas del modelo OSI.\\
     -Aplicación:Conectividad entre red y humano\\
     -Presentación: Representacion común entre los datos transferidos y la capa de aplicacion\\
     -Sesión: Comunicacion entre dispositivos de la red\\
@@ -45,6 +45,7 @@
         -Tecnología desactualizada\\
         
 \item Mencione algunas ventajas y desventajas del modelo de referencia TCP/IP híbrido.\\
+    NO ENCUENTRO INFORMACION DDD:
 
 \item Indique la diferencia entre un estándar de  facto y un estándar de  jure\\
     El estándar de jure es aprobado por una organización, mientras que el de facto es un estándar aceptado pero 
@@ -80,14 +81,16 @@ TIA, EIA, ITU-T, CCITT, FCC, ISO e IEEE?\\
     IEEE: Instituto de Ingeniería Eléctrica y Electrónica\\
 
 \item Explique lo que entiende por: broadcast (difusión),multicast y unicast.\\
-
+    -broadcast: se envia un paquete a todos los hosts conectados a la red
+    -multicast: se envia un paquete a un grupo seleccionado de hosts conectados a la red
+    -unicast : envia un paquete a un host determinado de la red
 \item Defina y compare los medios simplex, half-duplex y full-duplex. De ejemplos de sistemas para ´
 cada uno de estos casos.\\
-    simplex: transmite solo en una direccion de Tx a Rx\\
+    simplex: transmite solo en una direccion \\
         emjemplo: cuando se imprime a traves de un computador a una impresora\\
-    half-duplex : Transmite mediante canales de envio y recepción no simultaneos\\
+    half-duplex : Transmite en los 2 sentidos pero no a la vez \\
         ejemplo : wokitokis\\
-    full-duplex : Transmite mediante  canales de envío y recepción simultáneos\\
+    full-duplex : Transmite en los 2 sentidos simultaneamente\\
         ejemplo : Llamada en telefono celular\\
         
 \item Explique lo que entiende por: transmisiones en baseband y en broadband e indique 4 diferencias
@@ -99,6 +102,7 @@ entre las dos tecnicas de transmisión\\
 
 \item De un ejemplo de red que corresponda a una topología física bus y que tenga una topología
 logica anillo.\\
+    topología anillo : sala 
 
 \item De un ejemplo de red que corresponda a una topolog ´ ´ıa f´ısica estrella y que tenga una topolog´ıa
 logica bus.
