--- a/respuestas.tex
+++ b/respuestas.tex
@@ -81,9 +81,9 @@ TIA, EIA, ITU-T, CCITT, FCC, ISO e IEEE?\\
     IEEE: Instituto de Ingeniería Eléctrica y Electrónica\\
 
 \item Explique lo que entiende por: broadcast (difusión),multicast y unicast.\\
-    -broadcast: se envia un paquete a todos los hosts conectados a la red
-    -multicast: se envia un paquete a un grupo seleccionado de hosts conectados a la red
-    -unicast : envia un paquete a un host determinado de la red
+    -broadcast: se envia un paquete a todos los hosts conectados a la red\\
+    -multicast: se envia un paquete a un grupo seleccionado de hosts conectados a la red\\
+    -unicast : envia un paquete a un host determinado de la red\\
 \item Defina y compare los medios simplex, half-duplex y full-duplex. De ejemplos de sistemas para ´
 cada uno de estos casos.\\
     simplex: transmite solo en una direccion \\
@@ -95,6 +95,16 @@ cada uno de estos casos.\\
         
 \item Explique lo que entiende por: transmisiones en baseband y en broadband e indique 4 diferencias
 entre las dos tecnicas de transmisión\\
+    -baseband:Son las señales que no sufren ningun proceso de modulacion a la salida de fuente que originan,
+              es decir que son las señales transmitidas en su frecuencia original.
+    -broandband:se refiere a la transmisión de datos en el cual se envían simultáneamente varias piezas de información, 
+              con el objeto de incrementar la velocidad de transmisión efectiva,lleva más de una señal y cada una de 
+              ellas se transmite en diferentes canales, hasta su número máximo de canal\\
+    -Diferencias :
+        -
+        -
+        -
+        -
 
 \item Indique 2 ejemplos de redes que transmiten en baseband y 2 que transmiten en broadband\\
 
