--- a/respuestas.tex
+++ b/respuestas.tex
@@ -101,12 +101,18 @@ entre las dos tecnicas de transmisión\\
               con el objeto de incrementar la velocidad de transmisión efectiva,lleva más de una señal y cada una de 
               ellas se transmite en diferentes canales, hasta su número máximo de canal\\
     -Diferencias :
-        -
-        -
-        -
-        -
+        -baseband transmite solo de 1 señal por un medio, pero broandband puede transmitir mas de 1 señal por el mismo medio\\
+        -baseband funciona solo con sistema de 0 y 1 en cambio el broandband trabaja en forma de frecuencia,amplitud,etc\\
+        -baseband se modela como 0 si estaba off y 1 si esta on en cambio el broandband se modela como una onda\\
+        -baseband transmite direccionalmente en cambio broadband transmite bidireccionalmente\\
 
 \item Indique 2 ejemplos de redes que transmiten en baseband y 2 que transmiten en broadband\\
+    -baseband:\\
+        - microfono conectado a parlante\\
+        - Manipulador telegrafico\\
+    -broadband:\\
+        -Videotransferencia\\
+        -Streaming\\
 
 \item Defina o explique: topología física y topología logica. \\
 
