--- a/respuestas.tex
+++ b/respuestas.tex
@@ -112,21 +112,25 @@ entre las dos tecnicas de transmisión\\
         - Manipulador telegrafico\\
     -broadband:\\
         -Videotransferencia\\
-        -Streaming\\
+        -\\
 
 \item Defina o explique: topología física y topología logica. \\
-
+    -Topología físico 
+        Se refiere a como esta contruida una red con tuberias,cables,ubicacion de pcs.
+    -Topología logica
+        Se enfoca en como estan conectados los pcs, configuracion de estos como por ejemplo las IP's,
+        submascaras de red, puertos designados.
 \item De un ejemplo de red que corresponda a una topología física bus y que tenga una topología
 logica anillo.\\
-    topología anillo : sala 
 
-\item De un ejemplo de red que corresponda a una topolog ´ ´ıa f´ısica estrella y que tenga una topolog´ıa
+
+\item De un ejemplo de red que corresponda a una topología física estrella y que tenga una topología
 logica bus.
 
-\item Señale las ventajas y desventaja de los tipos de topolog ˜ ´ıas f´ısica de bus lineal, estrella, arbol, ´
+\item Señale las ventajas y desventaja de los tipos de topologías física de bus lineal, estrella, arbol, ´
 malla y anillo.
 
-\item De un ejemplo de una red que corresponda a una topolog ´ ´ıa f´ısica: bus, estrella, arbol, malla y ´
+\item De un ejemplo de una red que corresponda a una topología física: bus, estrella, arbol, malla y ´
 anillo.\\
 
 \item Indique que significan las siglas BAN, WBAN, PAN, LAN, WLAN, MAN, WAN y GAN.\\
@@ -141,7 +145,15 @@ anillo.\\
 
 
 \item ¿Cuales son las funciones de un DTE y las de un DCE. Dé 2 ejemplos de cada uno?.\\
-
+    DCE:\\
+        Puede comprender convertidores de señales, generadores de temporización,regeneradores de impulsos y dispositivos de control, 
+        junto con el equipo con otrasfunciones como protección contra errores o llamada y respuesta automática.\\
+        Ejemplos:PC,impresora\\
+    DTE:\\
+        Es un Equipo Terminal de Datos.Es aquel componentedel circuito de datos que hace de fuente o destino de la información,
+        este los procesa y los envia modificandolos.\\
+        Ejemplos:switch,router\\
+        
 \item ¿A que tipos de redes (PAN, LAN, WLAN, etc.) se refieren los estándares IEEE 802.3, 802.5,
 802.11, 802.15, 802.16?\\
     IEEE 802.3: MAN\\
@@ -173,6 +185,10 @@ y las funciones que cumplen.\\
 \item ¿Por que es importante la etapa de preámbulo al comienzo de cada frame?.\\
 
 \item Explique las diferencias entre direcciones logicas y direcciones físicas.
+    -La dirección logica(IP) no debe confundirse con la dirección MAC, porque la MAC es un identificador de 48 bits para identificar 
+    de forma única  a la tarjeta de red y no depende del protocolo de conexión utilizado ni de la red.\\
+    -La direecion fisica(MAC) es permanente y no varía, en cambio una direccion IP puede ser variable dependiendo del protocolo
+    de conexión utlizado en la red.\\
 
 \item En relacion a una dirección MAC Ethernet, explique el propósito de los primeros 24 bits. ¿Qué
 es OUI en una direccion MAC?, ¿qué indica una dirección MAC de destino FF-FF-FF-FF-FF- ´
