--- a/respuestas.tex
+++ b/respuestas.tex
@@ -193,6 +193,10 @@ y las funciones que cumplen.\\
 \item En relacion a una dirección MAC Ethernet, explique el propósito de los primeros 24 bits. ¿Qué
 es OUI en una direccion MAC?, ¿qué indica una dirección MAC de destino FF-FF-FF-FF-FF- ´
 FF?.\\
-
+    Los primeros 24 bits son el denominado OUI (idenfitificador único de organizacion) el cual es comprado a la autoridad de el 
+    el registro del instituto de Ingeniería Électrica y Electrónica(IEEE).Estos bits son un  identificador único,que identifica a 
+    cada empresa u organización (llamados asignados) a nivel mundial y reserva un bloque en cada posible identificador derivado para 
+    el uso exclusivo del asignado\\
+    La  MAC FF-FF-FF-FF-FF-FF es la direccion asignada para transmitir de forma broadcast los paquetes dentro de una red.\\
 \end{enumerate}
 \end{document}
