--- a/respuestas.tex
+++ b/respuestas.tex
@@ -174,55 +174,56 @@ del estandar IEEE 802.3: 802.3u; 802.3ab; 802.3ae; 802.3ba.\\
 siguientes especificaciones de capa física Ethernet: 10BASE2, 10BASE5, 100BASE-T, 100Base-TX,
 100BASE-FX, 1000Base-T, 1000BASE-CX, 1000Base-LX, 10GBASE-S y 10GBASE-L.\\
     10BASE2\\ 
-        -Tipo Cable: coaxial
-        -Velocidad : 10 Mbit/s
-        -Distancia máxima : 185 metros
-        -Topología: recubierto con diélectrico (tipo bus)
+        -Tipo Cable: coaxial\\
+        -Velocidad : 10 Mbit/s\\
+        -Distancia máxima : 185 metros\\
+        -Topología: recubierto con diélectrico (tipo bus)\\
     10Base5\\
-        -Tipo cable: Coaxial
-        -Velocidad: 10 Mbit/s
-        -Distancia Máxima: 500 metros
-        -Topología: recubierto con diélectrico (tipo bus)
-    100BASE-T
-        -Tipo cable: UTP
-        -Velocidad: 100 Mbit/s
-        -Distancia Máxima: 100 metros
-        -Topología:Estrella
-    100Base-TX
-        -Tipo cable: UTP
-        -Velocidad:100 Mbit/s
-        -Distancia Máxima:100 metros
-        -Topología:Estrella
-    100BASE-FX
-        -Tipo cable:Fibra óptica
-        -Velocidad: 100 Mbit/s
-        -Distancia Máxima: 2000 metros
-        -Topología:No permite uso de hubs
-    1000Base-T
-        -Tipo cable: UTP
-        -Velocidad: 1000Mb/s
-        -Distancia Máxima:100 metros
-        -Topología: Estrella
-    1000BASE-CX
-        -Tipo cable:STP
-        -Velocidad: 1000 Mb/s
-        -Distancia Máxima:25 metros
-        -Topología: 
-    1000Base-LX
-        -Tipo cable:fibra óptica
-        -Velocidad: 1000 Mb/s
-        -Distancia Máxima: 10 kilometros
-        -Topología:No permite uso de HUB
-    10GBASE-S
-        -Tipo cable:Fibra óptica
-        -Velocidad:10 Gbit/s
-        -Distancia Máxima:300 metros
-        -Topología:no permite uso de HUB
-    10GBASE-L.
-        -Tipo cable:Fibra óptica
-        -Velocidad:  10 Gbit/s
-        -Distancia Máxima: 40 kilometros
-        -Topología:no permite uso de HUB
+        -Tipo cable: Coaxial\\
+        -Velocidad: 10 Mbit/s\\
+        -Distancia Máxima: 500 metros\\
+        -Topología: recubierto con diélectrico (tipo bus)\\
+    100BASE-T\\
+        -Tipo cable: UTP\\
+        -Velocidad: 100 Mbit/s\\
+        -Distancia Máxima: 100 metros\\
+        -Topología:Estrella\\
+    100Base-TX\\
+        -Tipo cable: UTP\\
+        -Velocidad:100 Mbit/s\\
+        -Distancia Máxima:100 metros\\
+        -Topología:Estrella\\
+    100BASE-FX\\
+        -Tipo cable:Fibra óptica\\
+        -Velocidad: 100 Mbit/s\\
+        -Distancia Máxima: 2000 metros\\
+        -Topología:No permite uso de hubs\\
+    1000Base-T\\
+        -Tipo cable: UTP\\
+        -Velocidad: 1000Mb/s\\
+        -Distancia Máxima:100 metros\\
+        -Topología: Estrella\\
+    1000BASE-CX\\
+        -Tipo cable:STP\\
+        -Velocidad: 1000 Mb/s\\
+        -Distancia Máxima:25 metros\\
+        -Topología:Estrella\\ 
+    1000Base-LX\\
+        -Tipo cable:fibra óptica\\
+        -Velocidad: 1000 Mb/s\\
+        -Distancia Máxima: 10 kilometros\\
+        -Topología:No permite uso de HUB\\
+    10GBASE-S\\
+        -Tipo cable:Fibra óptica\\
+        -Velocidad:10 Gbit/s\\
+        -Distancia Máxima:300 metros\\
+        -Topología:no permite uso de HUB\\
+    10GBASE-L.\\
+        -Tipo cable:Fibra óptica\\
+        -Velocidad:  10 Gbit/s\\
+        -Distancia Máxima: 40 kilometros\\
+        -Topología:no permite uso de HUB\\
+
 \item ¿Por que la distancia máxima de segmento de red es mayor para 100BASE-FX que para 100BASE- ´
 TX?.\\
 
