--- a/respuestas.tex
+++ b/respuestas.tex
@@ -129,6 +129,31 @@ logica bus.
 
 \item Señale las ventajas y desventaja de los tipos de topologías física de bus lineal, estrella, arbol, ´
 malla y anillo.
+    Tipo Bus:
+        -Ventajas:
+            
+        -Desventajas:
+            
+    Tipo Estrella:
+            -Ventajas:
+            
+        -Desventajas:
+            
+    Tipo Arbol:
+            -Ventajas:
+            
+        -Desventajas:
+            
+    Tipo malla:
+            -Ventajas:
+            
+        -Desventajas:
+            
+    Tipo anillo:
+            -Ventajas:
+            
+        -Desventajas:
+            
 
 \item De un ejemplo de una red que corresponda a una topología física: bus, estrella, arbol, malla y ´
 anillo.\\
