--- a/respuestas.tex
+++ b/respuestas.tex
@@ -128,32 +128,46 @@ logica anillo.\\
 logica bus.
 
 \item Señale las ventajas y desventaja de los tipos de topologías física de bus lineal, estrella, arbol, ´
-malla y anillo.
-    Tipo Bus:
-        -Ventajas:
+malla y anillo.\\
+    Tipo Bus:\\
+        -Ventajas: -Ocupa menos cableado, es facil de arreglar \\
+        -Desventajas: -Si un usuario desconecta su computadora o hay alguna falla como la rotura de un cable
+                       la red deja de funcionar\\
+                      -La velocidad de la red es muy baja\\
+                      -las computadoras de la red no regeneran la señal sino que es generada por el cable
+                       y los terminales de la topologia\
+    Tipo Estrella:\\
+        -Ventajas: -Si una computadora o cable falla no afecta a la red completa,solamente afecta a 
+                    este equipo\\
+                   -Facil deteccion de errores y reparacion\\
+                   -Distribuye mejor el espacio ya que se puede ubicar el switch o HUB en el centro de
+                    la red\\
             
-        -Desventajas:
-            
-    Tipo Estrella:
-            -Ventajas:
-            
-        -Desventajas:
-            
-    Tipo Arbol:
-            -Ventajas:
-            
-        -Desventajas:
-            
-    Tipo malla:
-            -Ventajas:
-            
-        -Desventajas:
-            
-    Tipo anillo:
-            -Ventajas:
-            
-        -Desventajas:
-            
+        -Desventajas: - El numero de computadores conectados a la red se limita al hecho de cuantos puertos
+                        tenga el switch o HUB de la red.\\
+                      -Si el HUB o switch deja de funcionar toda la red quedará sin conexión.\\
+                      -No es tan económica ya que es necesario mas cable para hacer las conexiones\\
+    Tipo Arbol:\\
+        -Ventajas:-Gracias a sus subdivisiones se puede limitar el acceso a cierta información
+                   de algunos usuarios\\
+                  -Es considerada a nivel estructural como la mejor de las redes ramificadas ya
+                   que permite crear un orden jerárquico\\
+        -Desventajas: - Si la columna principal llega a tener una falla se sufrirá una interrupcion
+                        general a forma de red\\
+                      - Llega a tener esta red un mantenimiento complicado con un alto costo ya que 
+                        tiene un tamaño considerable\\
+    Tipo malla:\\
+        -Ventajas:  -Tiene redundancia permitiendo asi una mayor confiabilidad en la red\\
+                    -No requiere de un computador presenta una falla respecto a cable no afecta a 
+                     la red\\
+                    -No existe ninguna interrupción entre las comunicaciones\\
+        -Desventajas:-El costo de la red puede aumentar debido al cableo necesario para implementarla\\
+        
+    Tipo anillo:\\
+        -Ventajas:-Los datos fluyen en una unica direccion\\
+                  -Cada estacion recibe los datos y los retransmite al siguiente equipo\\
+                  -Minimo embotellamiento de los datos en la red\\
+        -Desventajas:-Como se encuentran unidos si falla un canal entre 2 nodos falla toda la red\\
 
 \item De un ejemplo de una red que corresponda a una topología física: bus, estrella, arbol, malla y ´
 anillo.\\
