--- a/respuestas.tex
+++ b/respuestas.tex
@@ -287,5 +287,14 @@ FF?.\\
     cada empresa u organización (llamados asignados) a nivel mundial y reserva un bloque en cada posible identificador derivado para 
     el uso exclusivo del asignado\\
     La  MAC FF-FF-FF-FF-FF-FF es la direccion asignada para transmitir de forma broadcast los paquetes dentro de una red.\\
+    \item Calcule la máxima cantidad de frames que puede transmitir un nodo Ethernet en un canal de 10
+    Mbps si en el campo de datos se tiene 46 bytes, no hay colisiones y el “gap” entre frames es de
+    9.6 ms (12 bytes).\\
+    \item Una red de comunicaciones que opera a 10 Mbps sólo puede cursar una media de 10.000 fra-
+    mes por minuto. Sabiendo que el tama ̃no medio de cada frame es de 10.000 bits, calcule el
+    rendimiento de esta red.\\
+    \item Explique en qué consiste el protocolo ARP. Además de algún ejemplo de un ataque a la seguri-
+    dad de dicho protocolo.
+    El protocolo ARP es un estándar TCP/IP que asocia las direcciones IP y MAC de los equipos conectados a la red. Un ejemplo de ataque utilizando ARP es el ARP-Poisoning consiste en enviar paquetes ARP falsos para que un dispositivo llene su tabla ARP con información falsa
 \end{enumerate}
 \end{document}
