--- a/respuestas.tex
+++ b/respuestas.tex
@@ -295,6 +295,6 @@ FF?.\\
     rendimiento de esta red.\\
     \item Explique en qué consiste el protocolo ARP. Además de algún ejemplo de un ataque a la seguri-
     dad de dicho protocolo.
-    El protocolo ARP es un estándar TCP/IP que asocia las direcciones IP y MAC de los equipos conectados a la red. Un ejemplo de ataque utilizando ARP es el ARP-Poisoning consiste en enviar paquetes ARP falsos para que un dispositivo llene su tabla ARP con información falsa
+    El protocolo ARP es un estándar TCP/IP que asocia las direcciones IP y MAC de los equipos conectados a la red. Un ejemplo de ataque utilizando ARP es el ARP-Spoofing consiste en enviar paquetes ARP falsos para que un router llene su tabla ARP con información falsa, de esta manera todos los datos que se supone llegarían a nuestra víctima llegaran al pc con la dirección MAC que hayamos especificado en el paquete falso.
 \end{enumerate}
 \end{document}
